styles/globals.css
body {
  margin: 0px;
  background-color: rgb(254, 216, 211);
  user-select: none;
}

.page-content {
  padding: 40px;
  color: white;
  font-size: 24px;
}

.root {
  overflow: hidden;
  width: 100%;
  margin: 0 auto;
}

.mui-svg-icon {
  transform: scale(3);
  color: salmon;
  filter: drop-shadow(-1px 0.5px #cb6155);
}

.nav-icon {
  transform: scale(1.75);
  color: salmon;
}

.logo {
  padding: 10px;
}

